--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,12 @@ paginate: 10
 
 # Social Media Settings
 # Remove the item if you don't need it
-github_username: github_username
-facebook_username: facebook_username
-twitter_username: twitter_username
-instagram_username: instagram_username
-linkedin_username: linkedin_username
-medium_username: medium_username
+# github_username: github_username
+facebook_username: jijitech
+twitter_username: jijitech
+# instagram_username: instagram_username
+# linkedin_username: linkedin_username
+# medium_username: medium_username
 
 
 # Posts Settings
