--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ two_columns_layout: true
 
 
 # Advanced Settings
-baseurl: "/jijiblog" # the subpath of your site, e.g. /blog
-url: "https://ajita-jijitech.github.io" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://ajita-jijitech.github.io/jijiblog" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
