--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ tags:
   - netlify
 email: youremail@xyz.com
 disqus_username: disqus_username
-show_hero: false
+show_hero: true
 menu:
   - title: Home
     url: /
